--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies
 fastapi==0.115.0
-uvicorn==0.30.0  # Pinned to minor version for stability
+uvicorn==0.30.0
 streamlit==1.39.0
 
 # Document processing
@@ -12,24 +12,27 @@ pdf2image==1.17.0
 PyPDF2==3.0.1
 python-magic==0.4.27
 lxml==5.3.0
-xlrd==2.0.1  # Needed for legacy Excel files
+xlrd==2.0.1
 
 # Data handling
 pandas==2.2.3
-numpy==1.26.4  # Explicitly added as pandas dependency
+numpy==1.26.4
 tabulate==0.9.0
 
 # AI/ML components
-openai==0.27.8
+openai==1.51.0
 tiktoken==0.8.0
 qdrant-client==1.12.0
-sentence-transformers==2.7.0  # For local embedding fallback
+spacy==3.7.6
+networkx==3.3
+tenacity==8.5.0
 
 # Web/API utilities
 python-multipart==0.0.12
-httpx==0.27.0  # Needed for async HTTP requests
-python-dotenv==1.0.1  # For environment variables
+httpx==0.27.0
+python-dotenv==1.0.1
+pydantic-settings==2.5.2
 
 # Runtime dependencies
-python-dateutil==2.9.0.post0  # Required by pandas
-typing-extensions==4.11.0  # For Python <3.11 compatibility
+python-dateutil==2.9.0.post0
+typing-extensions==4.11.0
