--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./data/logs:/app/data/logs
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - MISTRAL_API_KEY=${MISTRAL_API_KEY}
     depends_on:
       - qdrant
   streamlit-service:
@@ -24,6 +25,7 @@ services:
       - ./data/logs:/app/data/logs
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - MISTRAL_API_KEY=${MISTRAL_API_KEY}
     depends_on:
       - rag-service
   qdrant:
