--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,6 @@ openai==1.51.0
 tiktoken==0.8.0
 qdrant-client==1.12.0
 spacy==3.7.6
-networkx==3.3
 tenacity==8.5.0
 
 # Web/API utilities
@@ -35,6 +34,4 @@ pydantic-settings==2.5.2
 
 # Graph Visualization
 pyvis==0.3.2
-
-# Mistral + OCR
-mistralai==1.2.0
+pydgraph==24.2.1
